kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
  namespace: projects-kiii
spec:
  replicas: 3
  selector:
    matchLabels:
      app: projects
  template:
    metadata:
      labels:
        app: projects
    spec:
      containers:
        - name: projects
          image: stefanvasilev2002/projects-kiii-image:latest
          ports:
            - containerPort: 8000
