kubernetes/db-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: projects-kiii
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: projects-kiii
spec:
  ports:
    - port: 5432
      name: postgres
      protocol: TCP
  selector:
    app: postgres
