kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projects-service
  namespace: projects-kiii
spec:
  selector:
    app: projects
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
