kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projects-ingress
  namespace: projects-kiii
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projects-service
            port:
              number: 80
  - host: projects.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projects-service
            port:
              number: 80
